update: fund performance to 66.14% and refresh UI styling for sections

--- a/index.html
+++ b/index.html
@@ -444,10 +444,8 @@
         <div class="container">
             <h2>Our Fund Performance</h2>
             <!-- YTD PERFORMANCE NUMBER - UPDATE THIS! -->
-            <span class="ytd-number">+65.29%</span>
-            <!-- If performance is negative, add class="negative" to ytd-number and update text -->
-            <!-- <span class="ytd-number negative">-2.34%</span> -->
-            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of June 25, 2025)</span></span>
+            <span class="ytd-number">+66.14%</span>
+            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of July 1, 2025)</span></span>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
             </p>
@@ -455,129 +453,7 @@
         </div>
     </div>
 
-    <section id="about">
-        <div class="container">
-            <h2 class="section-title">About TradingTransformer Technologies</h2>
-            <p>Founded on the principle of innovation, TradingTransformer Technologies is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and large language model AI agents. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
-            <p><em>It took 6 years' research from inception (October 25, 2019) to reach excellence, with legal incorporation in Delaware on June 6, 2023.</em></p>
-            <div class="grid">
-                <div class="grid-item">
-                    <h3>Our Mission</h3>
-                    <p>To deliver exceptional, risk-adjusted returns for our investors through disciplined, technology-driven investment strategies. We aim to redefine the boundaries of active management.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>Core Values</h3>
-                    <p style="line-height: 1.7;">
-                        <strong style="color:#1976d2;">T</strong>rustworthiness<br>
-                        <strong style="color:#388e3c;">R</strong>esponsibility<br>
-                        <strong style="color:#fbc02d;">A</strong>daptability<br>
-                        <strong style="color:#d32f2f;">D</strong>iligence<br>
-                        <strong style="color:#8e24aa;">I</strong>nnovation<br>
-                        <strong style="color:#00acc1;">N</strong>imbleness<br>
-                        <strong style="color:#388e3c;">G</strong>rowth<br>
-                        <strong style="color:#1976d2;">T</strong>eamwork<br>
-                        <strong style="color:#d32f2f;">R</strong>esilience<br>
-                        <strong style="color:#fbc02d;">A</strong>ccountability<br>
-                        <strong style="color:#8e24aa;">N</strong>oble<br>
-                        <strong style="color:#00acc1;">S</strong>trategy<br>
-                        <strong style="color:#388e3c;">F</strong>ocus<br>
-                        <strong style="color:#1976d2;">O</strong>penness<br>
-                        <strong style="color:#d32f2f;">R</strong>esults<br>
-                        <strong style="color:#fbc02d;">M</strong>indfulness<br>
-                        <strong style="color:#8e24aa;">E</strong>ffortless<br>
-                        <strong style="color:#00acc1;">R</strong>esolute<br>
-                    </p>
-                </div>
-                <div class="grid-item">
-                    <h3>Our Vision</h3>
-                    <p>To be the leading global investment firm recognized for our technological prowess, transparency, and unwavering commitment to client success in the evolving financial landscape.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="strategy">
-        <div class="container">
-            <h2 class="section-title">Our Investment Strategy</h2>
-            <p>Our proprietary "Transformer" investment engine is at the heart of our strategy. It continuously analyzes vast datasets, including market data and alternative text data, to generate predictive insights and optimize portfolio allocations.</p>
-            <div class="grid">
-                <div class="grid-item">
-                    <h4>Quantitative Analysis</h4>
-                    <p>We employ sophisticated statistical models and machine learning algorithms&mdash;including large language models&mdash;not only to identify patterns and predict market movements with greater accuracy, but also to enhance both our investment decision making and the continuous iteration of our quantitative approaches.</p>
-                </div>
-                <div class="grid-item">
-                    <h4>Risk Management</h4>
-                    <p>We <span style="color: var(--accent-color); font-weight: bold;">never borrow money and never use leverage</span>. Our investment process is strictly long-only and fully funded, ensuring that portfolio risk is controlled and always aligned with our clients' tolerance. Advanced risk modeling is integral to our process, providing additional resiliency in all market conditions.</p>
-                </div>
-                <div class="grid-item">
-                    <h4>AI-Powered & Expert-Reviewed Decisions</h4>
-                    <p>Our AI-driven systems adapt to evolving market conditions, learning from new data to continuously improve strategies and performance. Every important decision is personally reviewed by our CEO, ensuring responsible oversight and a synergy between advanced technology and human expertise.</p>
-                </div>
-            </div>
-            <div style="text-align: center; margin-top: 30px;">
-                <p>
-                    Our approach is focused exclusively on stocks, maintaining a long-only position without the use of leverage. As a medium- to low-frequency trading firm, we emphasize disciplined, research-driven strategies that prioritize sustainable growth and prudent risk management.
-                </p>
-            </div>
-        </div>
-    </section>
-    
-    <section id="learn-more" class="cta-section" style="background-color: var(--bg-light);">
-        <div class="container">
-            <h2 style="color: var(--primary-color);">Ready to Transform Your Portfolio?</h2>
-            <p style="color: #1abc9c; background: linear-gradient(90deg, #0A2F5B 0%, #5dade2 100%); max-width:600px; margin: 0 auto 2em auto; font-size:1.15em; padding: 1.2em 1.5em; border-radius: 18px; box-shadow: 0 4px 16px rgba(0,0,0,0.07); line-height: 1.7;">
-                <span style="color: #00FF00; font-weight: 600;">Our proprietary technology</span>
-                <span style="color:#FFF;"> features a </span>
-                <span style="color:#00FF00; font-weight:600;">large language model-based method</span>
-                <span style="color:#FFF;"> to retrieve companies before ranking, enabling more accurate and insightful investment decisions.</span>
-                <br><br>
-                <span style="color:#FFF;">Discover how </span>
-                <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
-                <span style="color:#FFF;"> can help you achieve your financial goals. </span>
-                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat with the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
-                   style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
-                   onmouseover="this.style.color='#e8f8f5';"
-                   onmouseout="this.style.color='var(--light-text-color)';"
-                >WSW AI</a> chatbot after paying at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
-            </p>
-            <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
-               class="cta-button"
-               style="
-                   background-color: var(--accent-color);
-                   color: var(--light-text-color);
-                   padding: 15px 30px;
-                   border-radius: 5px;
-                   font-size: 1.1em;
-                   font-weight: bold;
-                   text-transform: uppercase;
-                   transition: background-color 0.3s ease, transform 0.2s ease;
-                   display: inline-block;
-                   text-decoration: none;
-                   cursor: pointer;
-               "
-               onmouseover="
-                   this.style.backgroundColor='#16a085'; 
-                   this.style.transform='translateY(-2px)';
-               "
-               onmouseout="
-                   this.style.backgroundColor='var(--accent-color)'; 
-                   this.style.transform='translateY(0)';
-               "
-             >WSW AI chatbot</a>
-        </div>
-    </section>
-
-    <!-- Claude Shannon Quote Section -->
-    <section style="
-        background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-        padding: 100px 20px;
-        position: relative;
-        overflow: hidden;
-        margin: 40px 0;
-        box-shadow: 
-            0 -10px 30px rgba(10,47,91,0.05),
-            0 10px 30px rgba(10,47,91,0.05);
-    ">
+    <section id="founding-inspiration">
         <!-- Decorative background elements -->
         <div style="
             position: absolute;
@@ -585,7 +461,7 @@
             right: -50px;
             width: 200px;
             height: 200px;
-            background: radial-gradient(circle, rgba(10,47,91,0.05) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(10,47,91,0.08) 0%, transparent 70%);
             border-radius: 50%;
         "></div>
         <div style="
@@ -665,6 +541,118 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container">
+            <h2 class="section-title">About TradingTransformer Technologies</h2>
+            <p>Founded on the principle of innovation, TradingTransformer Technologies is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and large language model AI agents. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
+            <p><em>It took 6 years' research from inception (October 25, 2019) to reach excellence, with legal incorporation in Delaware on June 6, 2023.</em></p>
+            <div class="grid">
+                <div class="grid-item">
+                    <h3>Our Mission</h3>
+                    <p>To deliver exceptional, risk-adjusted returns for our investors through disciplined, technology-driven investment strategies. We aim to redefine the boundaries of active management.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Core Values</h3>
+                    <p style="line-height: 1.7;">
+                        <strong style="color:#1976d2;">T</strong>rustworthiness<br>
+                        <strong style="color:#388e3c;">R</strong>esponsibility<br>
+                        <strong style="color:#fbc02d;">A</strong>daptability<br>
+                        <strong style="color:#d32f2f;">D</strong>iligence<br>
+                        <strong style="color:#8e24aa;">I</strong>nnovation<br>
+                        <strong style="color:#00acc1;">N</strong>imbleness<br>
+                        <strong style="color:#388e3c;">G</strong>rowth<br>
+                        <strong style="color:#1976d2;">T</strong>eamwork<br>
+                        <strong style="color:#d32f2f;">R</strong>esilience<br>
+                        <strong style="color:#fbc02d;">A</strong>ccountability<br>
+                        <strong style="color:#8e24aa;">N</strong>oble<br>
+                        <strong style="color:#00acc1;">S</strong>trategy<br>
+                        <strong style="color:#388e3c;">F</strong>ocus<br>
+                        <strong style="color:#1976d2;">O</strong>penness<br>
+                        <strong style="color:#d32f2f;">R</strong>esults<br>
+                        <strong style="color:#fbc02d;">M</strong>indfulness<br>
+                        <strong style="color:#8e24aa;">E</strong>ffortless<br>
+                        <strong style="color:#00acc1;">R</strong>esolute<br>
+                    </p>
+                </div>
+                <div class="grid-item">
+                    <h3>Our Vision</h3>
+                    <p>To be the leading global investment firm recognized for our technological prowess, transparency, and unwavering commitment to client success in the evolving financial landscape.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="strategy">
+        <div class="container">
+            <h2 class="section-title">Our Investment Strategy</h2>
+            <p>Our proprietary "Transformer" investment engine is at the heart of our strategy. It continuously analyzes vast datasets, including market data and alternative text data, to generate predictive insights and optimize portfolio allocations.</p>
+            <div class="grid">
+                <div class="grid-item">
+                    <h4>Quantitative Analysis</h4>
+                    <p>We employ sophisticated statistical models and machine learning algorithms&mdash;including large language models&mdash;not only to identify patterns and predict market movements with greater accuracy, but also to enhance both our investment decision making and the continuous iteration of our quantitative approaches.</p>
+                </div>
+                <div class="grid-item">
+                    <h4>Risk Management</h4>
+                    <p>We <span style="color: var(--accent-color); font-weight: bold;">never borrow money and never use leverage</span>. Our investment process is strictly long-only and fully funded, ensuring that portfolio risk is controlled and always aligned with our clients' tolerance. Advanced risk modeling is integral to our process, providing additional resiliency in all market conditions.</p>
+                </div>
+                <div class="grid-item">
+                    <h4>AI-Powered & Expert-Reviewed Decisions</h4>
+                    <p>Our AI-driven systems adapt to evolving market conditions, learning from new data to continuously improve strategies and performance. Every important decision is personally reviewed by our CEO, ensuring responsible oversight and a synergy between advanced technology and human expertise.</p>
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 30px;">
+                <p>
+                    Our approach is focused exclusively on stocks, maintaining a long-only position without the use of leverage. As a medium- to low-frequency trading firm, we emphasize disciplined, research-driven strategies that prioritize sustainable growth and prudent risk management.
+                </p>
+            </div>
+        </div>
+    </section>
+    
+    <section id="learn-more" class="cta-section" style="background: linear-gradient(135deg, #e0f7fa 0%, #d1c4e9 100%);">
+        <div class="container">
+            <h2 style="color: var(--primary-color);">Ready to Transform Your Portfolio?</h2>
+            <p style="color: #1abc9c; background: linear-gradient(90deg, #0A2F5B 0%, #5dade2 100%); max-width:600px; margin: 0 auto 2em auto; font-size:1.15em; padding: 1.2em 1.5em; border-radius: 18px; box-shadow: 0 4px 16px rgba(0,0,0,0.07); line-height: 1.7;">
+                <span style="color: #00FF00; font-weight: 600;">Our proprietary technology</span>
+                <span style="color:#FFF;"> features a </span>
+                <span style="color:#00FF00; font-weight:600;">large language model-based method</span>
+                <span style="color:#FFF;"> to retrieve companies before ranking, enabling more accurate and insightful investment decisions.</span>
+                <br><br>
+                <span style="color:#FFF;">Discover how </span>
+                <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
+                <span style="color:#FFF;"> can help you achieve your financial goals. </span>
+                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat business news with the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                   style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
+                   onmouseover="this.style.color='#e8f8f5';"
+                   onmouseout="this.style.color='var(--light-text-color)';"
+                >WSW AI</a> chatbot after paying at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
+            </p>
+            <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+               class="cta-button"
+               style="
+                   background-color: var(--accent-color);
+                   color: var(--light-text-color);
+                   padding: 15px 30px;
+                   border-radius: 5px;
+                   font-size: 1.1em;
+                   font-weight: bold;
+                   text-transform: uppercase;
+                   transition: background-color 0.3s ease, transform 0.2s ease;
+                   display: inline-block;
+                   text-decoration: none;
+                   cursor: pointer;
+               "
+               onmouseover="
+                   this.style.backgroundColor='#16a085'; 
+                   this.style.transform='translateY(-2px)';
+               "
+               onmouseout="
+                   this.style.backgroundColor='var(--accent-color)'; 
+                   this.style.transform='translateY(0)';
+               "
+             >WSW AI chatbot</a>
         </div>
     </section>
 
