update: simplify WSW AI chatbot promotional text and call-to-action button

--- a/index.html
+++ b/index.html
@@ -620,14 +620,11 @@
                 <span style="color:#00FF00; font-weight:600;">large language model-based method</span>
                 <span style="color:#FFF;"> to retrieve companies before ranking, enabling more accurate and insightful investment decisions.</span>
                 <br><br>
-                <span style="color:#FFF;">Discover how </span>
-                <span style="color:#00FF00; font-weight: 600;">TradingTransformer Technologies LLC</span>
-                <span style="color:#FFF;"> can help you achieve your financial goals. </span>
-                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat business news with the <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat business news with <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
                    onmouseout="this.style.color='var(--light-text-color)';"
-                >WSW AI</a> chatbot after paying at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">website</a>.</span>
+                >WSW AI</a> after checking out at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';"></a></span>
             </p>
             <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
                class="cta-button"
@@ -652,7 +649,7 @@
                    this.style.backgroundColor='var(--accent-color)'; 
                    this.style.transform='translateY(0)';
                "
-             >WSW AI chatbot</a>
+             >Chat business news with WSW AI today!</a>
         </div>
     </section>
 
