update: adjust YTD return to 65.36% and date to July 8, 2025

--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
     <div class="performance-banner" id="performance">
         <div class="container">
             <h2>Our Fund Performance</h2>
-            <!-- YTD PERFORMANCE NUMBER - UPDATE THIS! -->
-            <span class="ytd-number">+66.14%</span>
-            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of July 1, 2025)</span></span>
+            <!-- YTD PERFORMANCE NUMBER - UPDATED -->
+            <span class="ytd-number">+65.36%</span>
+            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of July 8, 2025)</span></span>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
             </p>
