--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
 
     <div class="performance-banner" id="performance">
         <div class="container">
-            <h2>Our Fund Performance</h2>
+            <h2>Our Performance Overview</h2>
             <!-- YTD PERFORMANCE NUMBER - UPDATED -->
-            <span class="ytd-number">+65.36%</span>
-            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of July 8, 2025)</span></span>
+            <span class="ytd-number">+85.42%</span>
+            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of August 8, 2025)</span></span>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
             </p>
