--- a/index.html
+++ b/index.html
@@ -620,13 +620,13 @@
                 <span style="color:#00FF00; font-weight:600;">large language model-based method</span>
                 <span style="color:#FFF;"> to retrieve companies before ranking, enabling more accurate and insightful investment decisions.</span>
                 <br><br>
-                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Chat business news with <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+                <span style="background-color: var(--accent-color); color: var(--light-text-color); font-weight: bold; padding: 0.22em 0.72em; border-radius: 6px; box-shadow: 0 2px 8px rgba(26, 188, 156, 0.3);">Try the free <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer"
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
-                   onmouseout="this.style.color='var(--light-text-color)';"
-                >WSW AI</a> after checking out at <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">https://wsw.ai</a> <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';"></a></span>
+                   onmouseout="this.style.color='var(--light-text-color)';" 
+                >WSW AI iOS app</a> to chat about business news, now available on the <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
             </p>
-            <a href="https://wsw.ai" target="_blank" rel="noopener noreferrer"
+            <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer"
                class="cta-button"
                style="
                    background-color: var(--accent-color);
@@ -649,7 +649,7 @@
                    this.style.backgroundColor='var(--accent-color)'; 
                    this.style.transform='translateY(0)';
                "
-             >Chat business news with WSW AI today!</a>
+             >Download Free WSW AI App!</a>
         </div>
     </section>
 
