docs: update company name to include LLC designation in website copy

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     <section class="hero">
         <div class="container">
             <h1>Transforming Investments with Technology</h1>
-            <p>TradingTransformer Technologies leverages cutting-edge AI and quantitative models to unlock superior market returns. Discover the future of fund management.</p>
+            <p>TradingTransformer Technologies LLC leverages cutting-edge AI and quantitative models to unlock superior market returns. Discover the future of fund management.</p>
             <a href="annual-letter-2025.html" class="cta-button">Learn More</a>
         </div>
     </section>
@@ -738,7 +738,7 @@
 
     <div class="disclaimer">
         <div class="container">
-            <p><strong>Important Disclaimer:</strong> Investment in any fund, including those managed by TradingTransformer Technologies, involves risk, including the possible loss of principal. Past performance is not a guarantee of future results. The information provided on this website is for informational purposes only and does not constitute an offer to sell or a solicitation of an offer to buy any securities or investment products. Any such offer or solicitation will be made only by means of a confidential private placement memorandum and an appropriate subscription agreement, and only in jurisdictions where permitted by law. Please consult with your financial advisor before making any investment decisions.</p>
+            <p><strong>Important Disclaimer:</strong> Investment in any fund, including those managed by TradingTransformer Technologies LLC, involves risk, including the possible loss of principal. Past performance is not a guarantee of future results. The information provided on this website is for informational purposes only and does not constitute an offer to sell or a solicitation of an offer to buy any securities or investment products. Any such offer or solicitation will be made only by means of a confidential private placement memorandum and an appropriate subscription agreement, and only in jurisdictions where permitted by law. Please consult with your financial advisor before making any investment decisions.</p>
             <!-- <p>Hypothetical or simulated performance results have certain limitations. Unlike an actual performance record, simulated results do not represent actual trading. Also, since the trades have not been executed, the results may have under-or-over compensated for the impact, if any, of certain market factors, such as lack of liquidity.</p> -->
         </div>
     </div>
