feat: add Amazon link to Claude Shannon biography reference

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                     box-shadow: 0 10px 30px rgba(10,47,91,0.15);
                 ">
                     <p style="margin: 0 0 8px 0; font-size: 1em; font-weight: 500;">
-                        From <em style="color: var(--accent-color);">A Mind at Play</em>, Jimmy Soni and Rob Goodman's 2017 biography of AI pioneer Claude Shannon
+                        From <a href="https://www.amazon.com/Mind-Play-Shannon-Invented-Information/dp/1476766681" target="_blank" rel="noopener noreferrer" style="color: var(--accent-color); text-decoration: none; font-style: italic;">A Mind at Play</a>, Jimmy Soni and Rob Goodman's 2017 biography of AI pioneer Claude Shannon
                     </p>
                     <p style="margin: 0; font-size: 0.95em; opacity: 0.9; font-style: italic;">
                         Claude Shannon wrote that in 1984. He died in 2001.
