--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
                    onmouseout="this.style.color='var(--light-text-color)';" 
-                >WSW AI iOS app</a> to chat about business news, now available on the <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
+                >WS AI Agents iOS app</a> to chat about business news, now available on the <a href="https://WSW.AI target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
             </p>
             <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer"
                class="cta-button"
@@ -720,7 +720,7 @@
                    this.style.backgroundColor='var(--accent-color)'; 
                    this.style.transform='translateY(0)';
                "
-             >Download Free WSW AI App!</a>
+             >Download Free WS AI Agents App!</a>
         </div>
     </section>
 
