update: refine hero section tagline and simplify app promotional text
- Changed "fund management" to "capital allocations" in hero description
- Streamlined WS AI Agents app announcement by removing "to chat about business news"

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     <section class="hero">
         <div class="container">
             <h1>Transforming Investments with Technology</h1>
-            <p>TradingTransformer Technologies LLC leverages cutting-edge AI and quantitative models to unlock superior market returns. Discover the future of fund management.</p>
+            <p>TradingTransformer Technologies LLC leverages cutting-edge AI and quantitative models to unlock superior market returns. Discover the future of capital allocations.</p>
             <a href="annual-letter-2025.html" class="cta-button">Learn More</a>
         </div>
     </section>
@@ -695,7 +695,7 @@
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
                    onmouseout="this.style.color='var(--light-text-color)';" 
-                >WS AI Agents iOS app</a> to chat about business news, now available on the <a href="https://WSW.AI target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
+                >WS AI Agents iOS app</a> now available on the <a href="https://WSW.AI target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
             </p>
             <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer"
                class="cta-button"
