update: refine investment approach description to emphasize public companies and low-frequency trading
- Changed "stocks" to "investment in public companies" for clarity
- Updated trading frequency from "medium- to low-frequency" to "low-frequency"

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
             </div>
             <div style="text-align: center; margin-top: 30px;">
                 <p>
-                    Our approach is focused exclusively on stocks, maintaining a long-only position without the use of leverage. As a medium- to low-frequency trading firm, we emphasize disciplined, research-driven strategies that prioritize sustainable growth and prudent risk management.
+                    Our approach is focused exclusively on investment in public companies, maintaining a long-only position without the use of leverage. As a low-frequency trading firm, we emphasize disciplined, research-driven strategies that prioritize sustainable growth and prudent risk management.
                 </p>
             </div>
         </div>
