update: clarify advisor's guidance on transformer research and streamline app announcement text
- Added context that Prof. Cho suggested working on transformers for economic value creation
- Changed "now available on" to "on" in WS AI Agents app announcement for brevity

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                    style="color: var(--light-text-color); font-weight: bold; text-decoration: none; transition: color 0.3s ease;"
                    onmouseover="this.style.color='#e8f8f5';"
                    onmouseout="this.style.color='var(--light-text-color)';" 
-                >WS AI Agents iOS app</a> now available on the <a href="https://WSW.AI target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
+                >WS AI Agents iOS app</a> on the <a href="https://WSW.AI target="_blank" rel="noopener noreferrer" style="color: var(--light-text-color); text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='#e8f8f5';" onmouseout="this.style.color='var(--light-text-color)';">App Store</a>!</span>
             </p>
             <a href="https://apps.apple.com/us/app/wsw-ai/id6747843100?platform=iphone" target="_blank" rel="noopener noreferrer"
                class="cta-button"
