update: add context about PhD research origins and emphasize Delaware incorporation milestone
- Added "as a final-year PhD research project" to clarify company's academic origins
- Enhanced incorporation description with "a memorable legal landmark on our journey" to emphasize significance

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <div class="container">
             <h2 class="section-title">About TradingTransformer Technologies LLC</h2>
             <p>Founded on the principle of innovation, TradingTransformer Technologies LLC is a pioneering investment firm dedicated to harnessing the power of artificial intelligence and large language model AI agents. Our "Transformer" models are designed to identify and capitalize on market inefficiencies previously undetectable by traditional methods.</p>
-            <p><em>We started on October 25, 2019 and it took six years of research to reach excellence, with legal incorporation in Delaware on June 6, 2023.</em></p>
+            <p><em>We started on October 25, 2019 as a final-year PhD research project, and it took six years of research to reach excellence, with legal incorporation in Delaware on June 6, 2023—a memorable legal landmark on our journey.</em></p>
             <div class="grid">
                 <div class="grid-item">
                     <h3>Our Mission</h3>
