--- a/index.html
+++ b/index.html
@@ -533,8 +533,11 @@
         <div class="container">
             <h2>Our Performance Overview</h2>
             <!-- YTD PERFORMANCE NUMBER - UPDATED -->
-            <span class="ytd-number">+58.35%</span>
-            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of November 8, 2025)</span></span>
+            <span class="ytd-number">+62.2%</span>
+            <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of December 8, 2025)</span></span>
+            <p style="font-size: 1.1em; margin-top: 15px; color: var(--performance-positive);">
+                <strong>16.6x better</strong> than <a href="https://fundresearch.fidelity.com/mutual-funds/summary/31617H201" target="_blank" style="color: var(--light-text-color); text-decoration: underline;">Fidelity Money Market Fund</a> YTD (3.74%)
+            </p>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
             </p>
@@ -660,7 +663,7 @@
                         </div>
                         <div class="values-column">
                             <p style="line-height: 1.7;">
-                                 <strong style="color:#1976d2;">T</strong>eamwork<br>
+                                <strong style="color:#1976d2;">T</strong>eamwork<br>
                                 <strong style="color:#d32f2f;">R</strong>esilience<br>
                                 <strong style="color:#fbc02d;">A</strong>ccountability<br>
                                 <strong style="color:#8e24aa;">N</strong>oble<br>
@@ -670,7 +673,7 @@
                                 <strong style="color:#d32f2f;">R</strong>esults<br>
                                 <strong style="color:#fbc02d;">M</strong>indfulness<br>
                                 <strong style="color:#8e24aa;">E</strong>ffortless<br>
-                        <strong style="color:#00acc1;">R</strong>esolute<br>
+                                <strong style="color:#00acc1;">R</strong>esolute<br>
                             </p>
                         </div>
                     </div>
