update: correct performance comparison multiplier and add plus sign to benchmark return
- Changed comparison from "16.6x better" to "15.6x better" for accuracy
- Added "+" prefix to Fidelity Money Market Fund YTD return (3.74% → +3.74%)

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             <span class="ytd-number">+62.2%</span>
             <span class="ytd-label">Year-to-Date (YTD) Return <span style="font-size:0.9em; opacity:0.7;">(as of December 8, 2025)</span></span>
             <p style="font-size: 1.1em; margin-top: 15px; color: var(--performance-positive);">
-                <strong>16.6x better</strong> than <a href="https://fundresearch.fidelity.com/mutual-funds/summary/31617H201" target="_blank" style="color: var(--light-text-color); text-decoration: underline;">Fidelity Money Market Fund</a> YTD (3.74%)
+                <strong>15.6x better</strong> than <a href="https://fundresearch.fidelity.com/mutual-funds/summary/31617H201" target="_blank" style="color: var(--light-text-color); text-decoration: underline;">Fidelity Money Market Fund</a> YTD (+3.74%)
             </p>
             <p style="font-size: 0.9em; opacity: 0.8; margin-top: 15px;">
                 Past performance is not indicative of future results.
