update: remove rocket emoji from WS AI Agents app download button for cleaner appearance
- Removed "🚀" emoji prefix from download button text
- Simplified button text to "Download Free WS AI Agents App"

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                    this.style.transform='translateY(0) scale(1)';
                    this.style.boxShadow='0 8px 25px rgba(26, 188, 156, 0.4)';
                "
-            >🚀 Download Free WS AI Agents App</a>
+            > Download Free WS AI Agents App</a>
             
             <p style="color: rgba(255,255,255,0.7); font-size: 0.9em; margin-top: 20px;">
                 Available on the App Store • No credit card required
